--- a/style/styleDashboard.css
+++ b/style/styleDashboard.css
@@ -10,7 +10,7 @@ header{
 
     /*STYLE*/
     color:white;
-    background:linear-gradient(to bottom, rgba(0, 0, 0, 0.8),transparent,70%, rgb(0, 0, 0, 0.8));
+    background:linear-gradient(to bottom, #000000cc,transparent,70%, #000000cc);
 
 }
 .title h1{
